[package]
name = "iced_table2"
version = "0.14.1"
edition = "2021"
description = "iced_table but updated to work with iced version 0.14.0"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/kevkoa2106/iced_table2"
homepage = "https://github.com/kevkoa2106/iced_table2"
keywords = ["iced", "widget"]

[dependencies]
iced_core = "0.14"
iced_widget = "0.14"

[dev-dependencies]
iced = { version = "0.14", features = ["default"] }
